updating website files

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>My first page yay!</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 
 
@@ -11,7 +12,7 @@
     <h2>This is a smaller headline.</h2>
     <h6> This is a tiny headline.</h6>
     <p>A paragraph of text starts here.</p>
-    <p>A second paragraph starts here.</p>
+    <p class="special-class"> A second paragraph starts here.</p>
     <hr> 
     <ul>
         <li>apples</li>
@@ -24,6 +25,11 @@
         <li>Step 3</li>
     </ol>
     <h5>Here is a <a href="https://google.com">link to Google</a>.</h5>
+    <!-- Here i will add some images -->
+    <p><img src="images/pexels-michael-burrows-7125631.jpg" alt="Coffee Cup" width="300px"></p>
+    <br> <img src="images/pexels-turkan-bakirli-17792525 (1).jpg" alt="Hand Hold" width="300px">
+    <br> <img src="images/pexels-musicoentertainment-17896249.jpg" alt="Homes" width="300px">
+    <p>here <br> is <br> some <br> <u>text</u> <br> just <br> to <br> <i>give</i> <br> an <br> <b>example</b>.</p>
 
 
 
