--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -11,25 +11,25 @@
 <h3>by Dieter Rams</h3>
 <br> <h2> <span class="number">1.</span>Good design is <b>innovative</b></h2>
 <p>The possibilities for innovation are not, by any means, exhausted. Technological development is always offering new opportunities for innovative design. But innovative design always develops in tandem with innovative technology, and can never be an end in itself.</p>
-<img src="pexels-julia-m-cameron-4144179.jpg" alt="innovative" width="300px" class="center">
+<img src="images/pexels-julia-m-cameron-4144179.jpg" alt="innovative" width="300px" class="center">
 
 <br> <h2> <span class="number">2.</span>Good design makes a product <b>useful</b></h2>
 <p>A product is bought to be used. It has to satisfy certain criteria, not only functional, but also psychological and aesthetic. Good design emphasizes the usefulness of a product whilst disregarding anything that could possibly detract from it.</p>
 
 <br> <h2> <span class="number">3.</span>Good design is <b>aesthetic</b></h2>
 <p>The aesthetic quality of a product is integral to its usefulness because products we use every day affect our person and our well-being. But only well-executed objects can be beautiful.</p>
-<img src="pexels-nataliya-vaitkevich-7184344.jpg" alt="flowers aesthetic" width="200px" class="center">
+<img src="images/pexels-nataliya-vaitkevich-7184344.jpg" alt="flowers aesthetic" width="200px" class="center">
 
 <br> <h2> <span class="number">4.</span>Good design makes a product <b>understandable</b></h2>
 <p>It clarifies the product's structure. Better still, it can make the product talk. At best, it is self-explanatory.</p>
-<img src="pexels-henry-&-co-2362155.jpg" alt="adidas" width="200px" class="center">
+<img src="images/pexels-henry-&-co-2362155.jpg" alt="adidas" width="200px" class="center">
 
 <br> <h2> <span class="number">5.</span>Good design is <b>unobtrusive</b></h2>
 <p>Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user's self-expression.</p>
 
 <br> <h2> <span class="number">6.</span>Good design is <b>honest</b></h2>
 <p>It does not make a product more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.</p>
-<img src="pexels-picjumbocom-196644.jpg" alt="honest design" width="300px" class="center">
+<img src="images/pexels-picjumbocom-196644.jpg" alt="honest design" width="300px" class="center">
 
 <br> <h2> <span class="number">7.</span>Good design is <b>long-lasting</b></h2>
 <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years - even in today's throwaway society.</p>
@@ -39,7 +39,7 @@
 
 <br> <h2> <span class="number">9.</span>Good design is <b>environmentally-friendly</b></h2>
 <p>Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</p>
-<img src="pexels-ready-made-3850512.jpg" alt="Envrionment" width="300px" class="center"> 
+<img src="images/pexels-ready-made-3850512.jpg" alt="Envrionment" width="300px" class="center"> 
 
 <br> <h2> <span class="number">10.</span>Good design is as <b>little design as possible</b></h2>
 <p>Less, but better - because it concentrates on the essential aspects, and the products are not burdened with non-essentials.</p>
