--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 
 
 <body>
+<div class="navigation">
+    <a href="index.html">Exercise 1</a>
+    <a href="https://lweinkauf.github.io/web-class/exercise2/">Exercise 2</a>
+    <a href="https://lweinkauf.github.io/web-class/journalentry1/">Journal Entry 1</a>
+    <a href="https://lweinkauf.github.io/web-class/project1/">Project 1</a>
+    <a href="https://lweinkauf.github.io/web-class/exercise3/">Exercise 3</a>
+    <a href="https://lweinkauf.github.io/web-class/project3story/">Project 3</a>
+    <a href="https://lweinkauf.github.io/web-class/journalentry2/">Journal 2</a>
+</div>
+    
     <h1>Lena's Page</h1>
     <h2>This is a smaller headline.</h2>
     <h6> This is a tiny headline.</h6>
