--- a/JournalReflection/index.html
+++ b/JournalReflection/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Fun with Nature!</title>
+    <title>Final Journal Entry</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- tag to make page responsive -->
