--- a/FinalProject/shrimp.html
+++ b/FinalProject/shrimp.html
@@ -40,7 +40,7 @@
             <h6>Pop's Cookbook</h6>
             <h5>01</h5>
             <h1>appetizer</h1>
-            <a class="btn" href="Char.html">hungry for more?</a>
+            <a class="btn" href="char.html">hungry for more?</a>
         </div>
 
         <div class="column">
