--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <a href="https://lweinkauf.github.io/web-class/exercise3/">Exercise 3</a>
     <a href="https://lweinkauf.github.io/web-class/project3story/">Project 3</a>
     <a href="https://lweinkauf.github.io/web-class/journalentry2/">Journal 2</a>
+    <a href="https://lweinkauf.github.io/web-class/JournalReflection/">Journal 3</a>
+    <a href="https://lweinkauf.github.io/web-class/FinalProject/">Project 4</a>
 </div>
     
     <h1>Lena's Page</h1>
